components/ticker.module.scss
.section {
  display: flex;
}

.head {
  background: #c32939;
  flex: 0 0 15%;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.6rem;
  padding: 1rem;
}

.body {
  background: #ececec;
  flex: 0 0 85%;
  display: flex;
  padding: 1rem;
  p {
    padding: 0 2rem;
    border-right: 1px solid #000;
  }
}

@media (max-width: 480px) {
  .head {
    display: none;
  }
  .body {
    padding: 1rem 0;
  }
}

